tests/ui/fail/exhaustive_match_option_stream.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/fail/exhaustive_match_option_stream.rs:11:11
   |
11 |     match stream {
   |           ^^^^^^ pattern `_` not covered
   |
note: `OptionStreamCapability` defined here
  --> src/providers/mod.rs
   |
   | pub enum OptionStreamCapability {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `OptionStreamCapability`
   = note: `OptionStreamCapability` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
14 ~         OptionStreamCapability::ChainQuotes { verified: _ } => "chain-quotes",
15 ~         _ => todo!(),
   |
